# vscode-ispc

./: .gitignore  CMakeLists.txt  License.txt  README.md  tree-sitter-CMakeLists.txt
.github/: dependabot.yml
.github/workflows/: build.yml
client-visual-studio/: ISPCContentTypeDefinition.cs  ISPCLanguageClient.cs  ISPCLanguageExtension.csproj  ISPCLanguageExtension.sln  ISPCLanguageExtensionSettings.json  VSPackage.resx  app.config  packages.config  source.extension.vsixmanifest
client-visual-studio/Properties/: Settings.Designer.cs
client-vscode/: .gitignore  .vscodeignore  License.txt  README.md  ThirdPartyNotices.txt  ispc-1.1.1.vsix  ispc-configuration.json  ispc-snippets.json  ispc.tmLanguage  package-lock.json  package.json
client-vscode/images/: ispc-icon.pdn
client-vscode/server/: ispc.tree-sitter.dylib  tree_sitter.dylib
client-vscode/src/: extension.ts
client-vscode/test/: test.ispc
ispc.tree-sitter/: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md
ispc.tree-sitter/src/tree_sitter/: parser.h
ispc.tree-sitter/test/corpus/: statements.txt
server/: ispc_languageserver.sln
server/ispc.tree-sitter/: CMakeLists.txt
server/ispc_languageserver/: AbstractSyntaxTreeManager.cs  App.cs  Compiler.cs  CompletionHandler.cs  DefinitionHandler.cs  DidChangeWatchedFilesHandler.cs  Logger.cs  Program.cs  SignatureHelpHandler.cs  TextDocumentChangedEventArgs.cs  TextDocumentHandler.cs  TextDocumentManager.cs  binding.cs  ispc_languageserver.csproj  ispc_stdlib.txt
server/tree-sitter/: Makefile
server/tree-sitter/lib/: Cargo.toml
server/tree-sitter/lib/binding_rust/: build.rs  lib.rs
server/tree-sitter/lib/src/: clock.h  parser.c  stack.c  subtree.c  subtree.h  tree.h
(+3 files in other folders)
