[package]
name = "tree-sitter"
description = "Rust bindings to the Tree-sitter parsing library"
version = "0.20.10"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "binding_rust/README.md"
keywords = ["incremental", "parsing"]
categories = ["api-bindings", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter"

build = "binding_rust/build.rs"

include = [
  "/binding_rust/*",
  "/Cargo.toml",
  "/include/*",
  "/src/*.h",
  "/src/*.c",
  "/src/unicode/*",
]

[features]
logging_lexer = []
logging_parser = []
logging_query = []
logging_changed_ranges = []
logging = ["logging_lexer", "logging_parser", "logging_query", "logging_changed_ranges"]
serialization = ["serde"]

[dependencies]
lazy_static = { version = "1.2.0", optional = true }
regex = "1"
serde = { version = "1.0.144", features = ["derive"], optional = true }

[build-dependencies]
cc = { git = "https://github.com/aminya/cc-rs", rev = "5f0c68f", features = ["parallel"]}

[lib]
path = "binding_rust/lib.rs"
